refactor: dependency management