@@ -14,9 +14,3 @@
 dependencies {
     testImplementation(project(":cosid-test"))
 }
-
-tasks.withType<Test>().all {
-    jvmArgs(
-        "--add-opens=java.base/java.lang=ALL-UNNAMED"
-    )
-}
